--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,22 @@
         </div>
 
         <div class="teoria">
+            <h3>Lezione Finale - Todo List Tutorial</h3>
+            <p>Progetto completo che integra tutte le lezioni: HTML, Bootstrap, React e SASS</p>
+            <ul>
+                <li><a href="/lezione-finale/index.html">Introduzione alla Lezione Finale</a></li>
+                <li><a href="/lezione-finale/step-1-html/index.html">Step 1 - HTML Base</a></li>
+                <li><a href="/lezione-finale/step-2-bootstrap/index.html">Step 2 - Bootstrap</a></li>
+                <li><a href="/lezione-finale/step-3a-react-setup/index.html">Step 3a - React Setup</a></li>
+                <li><a href="/lezione-finale/step-3b-react-state/index.html">Step 3b - React State</a></li>
+                <li><a href="/lezione-finale/step-3c-react-interactions/index.html">Step 3c - React Interactions</a></li>
+                <li><a href="/lezione-finale/step-3d-react-storage/index.html">Step 3d - React Storage</a></li>
+                <li><a href="/lezione-finale/step-4-sass/index.html">Step 4 - SASS Styling</a></li>
+                <li><a href="/lezione-finale/progetto-finale/index.html">Progetto Finale Completo</a></li>
+            </ul>
+        </div>
+
+        <div class="teoria">
             <h3>Risorse</h3>
             <ul>
                 <li><a href="/link-utili.html">Link Utili</a></li>
