--- a/public/lezione-finale/step-2-bootstrap/index.html
+++ b/public/lezione-finale/step-2-bootstrap/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Step 2 - Bootstrap | Task Manager</title>
+    <title>Step 2 - Bootstrap | Todo List</title>
     
     <!--
     ========================================
@@ -41,10 +41,24 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body class="bg-light">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="/">
+                <i class="bi bi-house-door me-2"></i>Home
+            </a>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="#tasks">
+                    <i class="bi bi-check2-square me-1"></i>Task
+                </a>
+            </div>
+        </div>
+    </nav>
+
     <div class="container py-5">
         <!-- Intestazione principale dell'applicazione -->
         <header class="bg-white p-4 rounded-top shadow-sm">
-            <h1 class="text-primary">Task Manager</h1>
+            <h1 class="text-primary">Todo List</h1>
             <p class="text-muted mb-0">Gestisci le tue attività</p>
         </header>
 
@@ -78,7 +92,7 @@
                     <li class="list-group-item">
                         <div class="d-flex align-items-center">
                             <input type="checkbox" id="task1" class="form-check-input me-2">
-                            <label for="task1" class="flex-grow-1">Completare il corso di React</label>
+                            <label for="task1" class="flex-grow-1">Cosa da fare 1</label>
                             <button class="btn btn-outline-danger btn-sm">
                                 <i class="bi bi-trash"></i>
                             </button>
@@ -87,7 +101,7 @@
                     <li class="list-group-item">
                         <div class="d-flex align-items-center">
                             <input type="checkbox" id="task2" class="form-check-input me-2">
-                            <label for="task2" class="flex-grow-1">Studiare HTML e CSS</label>
+                            <label for="task2" class="flex-grow-1">Cosa da fare 2</label>
                             <button class="btn btn-outline-danger btn-sm">
                                 <i class="bi bi-trash"></i>
                             </button>
@@ -97,6 +111,13 @@
             </section>
         </main>
     </div>
+
+    <!-- Footer -->
+    <footer class="bg-white shadow-sm mt-5 py-3">
+        <div class="container text-center text-muted">
+            <p class="mb-0">Lezione Finale - Corso Frontend</p>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS Bundle (include Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
