--- a/public/lezione-finale/step-3a-react-setup/index.html
+++ b/public/lezione-finale/step-3a-react-setup/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Step 3a - React Setup | Task Manager</title>
+    <title>Step 3a - React Setup | Todo List</title>
     
     <!--
     ========================================
@@ -38,8 +38,29 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body class="bg-light">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="/">
+                <i class="bi bi-house-door me-2"></i>Home
+            </a>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="#tasks">
+                    <i class="bi bi-check2-square me-1"></i>Task
+                </a>
+            </div>
+        </div>
+    </nav>
+
     <!-- Root element dove React renderizzerà l'app -->
     <div id="root"></div>
+
+    <!-- Footer -->
+    <footer class="bg-white shadow-sm mt-5 py-3">
+        <div class="container text-center text-muted">
+            <p class="mb-0">Lezione Finale - Corso Frontend</p>
+        </div>
+    </footer>
 
     <!-- 
     ========================================
@@ -59,20 +80,17 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- 
-    ========================================
-    CODICE REACT
-    ========================================
-    type="text/babel" permette a Babel di trasformare JSX
-    -->
-    <script type="text/babel">
+    <!-- App JS -->
+    <script type="text/babel" src="app.js"></script>
+</body>
+</html>
         // ==========================================
         // COMPONENTE HEADER
         // ==========================================
         function Header() {
             return (
                 <header className="bg-white p-4 rounded-top shadow-sm">
-                    <h1 className="text-primary">Task Manager</h1>
+                    <h1 className="text-primary">Todo List</h1>
                     <p className="text-muted mb-0">Gestisci le tue attività</p>
                 </header>
             );
@@ -139,12 +157,12 @@
         function TaskList() {
             // Dati statici di esempio
             const tasks = [
-                { id: 1, text: "Completare il corso di React", completed: false },
-                { id: 2, text: "Studiare HTML e CSS", completed: false }
+                { id: 1, text: "Cosa da fare 1", completed: false },
+                { id: 2, text: "Cosa da fare 2", completed: false }
             ];
 
             return (
-                <section>
+                <section id="tasks">
                     <h2 className="h4 mb-3">I tuoi task</h2>
                     <ul className="list-group">
                         {tasks.map(task => (
