Add external link to MySQL database resource in navigation

--- a/public/corso-mysql/index.html
+++ b/public/corso-mysql/index.html
@@ -125,6 +125,7 @@
 
         <div class="nav">
             <a href="/index.html" class="btn-home">Tutti i Corsi</a>
+            <a href="http://65.109.2.212:8081/" class="btn-external" target="_blank">Database MySQL</a>
         </div>
     </div>
 </body>
