Add lessons on EXISTS, subqueries, and temporary tables in MySQL
- Created lesson 13.2 covering EXISTS operator and subqueries in SELECT/FROM.
- Added lesson 14 introducing temporary tables, their creation, and usage.
- Developed lesson 14.1 detailing the creation and practical use cases of temporary tables.
- Included lesson 14.2 discussing advanced use cases of temporary tables and Common Table Expressions (CTE).
- Added a comprehensive quiz covering key concepts from the MySQL course.

--- a/public/corso-mysql/index.html
+++ b/public/corso-mysql/index.html
@@ -123,6 +123,37 @@
             </ul>
         </div>
 
+        <div class="teoria">
+            <h3>Lezione 12 - JOIN</h3>
+            <p>Combinare dati da più tabelle con le JOIN</p>
+            <ul>
+                <li><a href="/corso-mysql/lezione-12/index.html">Introduzione alla Lezione 12</a></li>
+                <li><a href="/corso-mysql/lezione-12/lezione-12-1.html">12.1 - INNER JOIN</a></li>
+                <li><a href="/corso-mysql/lezione-12/lezione-12-2.html">12.2 - LEFT JOIN e RIGHT JOIN</a></li>
+                <li><a href="/corso-mysql/lezione-12/lezione-12-3.html">12.3 - CROSS JOIN e SELF JOIN</a></li>
+            </ul>
+        </div>
+
+        <div class="teoria">
+            <h3>Lezione 13 - Subquery (Query Nidificate)</h3>
+            <p>Query all'interno di altre query per operazioni complesse</p>
+            <ul>
+                <li><a href="/corso-mysql/lezione-13/index.html">Introduzione alla Lezione 13</a></li>
+                <li><a href="/corso-mysql/lezione-13/lezione-13-1.html">13.1 - Subquery nel WHERE</a></li>
+                <li><a href="/corso-mysql/lezione-13/lezione-13-2.html">13.2 - EXISTS e Subquery nel SELECT/FROM</a></li>
+            </ul>
+        </div>
+
+        <div class="teoria">
+            <h3>Lezione 14 - Tabelle Temporanee</h3>
+            <p>Creare e utilizzare tabelle temporanee per query complesse</p>
+            <ul>
+                <li><a href="/corso-mysql/lezione-14/index.html">Introduzione alla Lezione 14</a></li>
+                <li><a href="/corso-mysql/lezione-14/lezione-14-1.html">14.1 - Creazione e Uso di Tabelle Temporanee</a></li>
+                <li><a href="/corso-mysql/lezione-14/lezione-14-2.html">14.2 - Casi d'Uso Avanzati e CTE</a></li>
+            </ul>
+        </div>
+
         <div class="nav">
             <a href="/index.html" class="btn-home">Tutti i Corsi</a>
             <a href="http://65.109.2.212:8081/" class="btn-external" target="_blank">Database MySQL</a>
