corretta e rivista la versione stapabile

--- a/public/lezione-1/lezione-1-2.html
+++ b/public/lezione-1/lezione-1-2.html
@@ -130,7 +130,8 @@
 
         <div class="anteprima">
             <h4>Esempio Interattivo</h4>
-            <iframe src="esempi_1-2/esempio-input-text.html" width="100%" height="400" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/esempio-input-text.html" width="100%" height="400" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/esempio-input-text.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/esempio-input-text.html</a></p>
         </div>
 
         <h3>3.2 &lt;textarea&gt;</h3>
@@ -150,7 +151,8 @@
 
         <div class="anteprima">
             <h4>Esempio Interattivo</h4>
-            <iframe src="esempi_1-2/esempio-textarea.html" width="100%" height="350" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/esempio-textarea.html" width="100%" height="350" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/esempio-textarea.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/esempio-textarea.html</a></p>
         </div>
 
         <h3>3.3 &lt;select&gt;</h3>
@@ -193,7 +195,8 @@
 
         <div class="anteprima">
             <h4>Esempio Interattivo</h4>
-            <iframe src="esempi_1-2/esempio-select.html" width="100%" height="500" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/esempio-select.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/esempio-select.html</a></p>
+            <iframe src="esempi/esempio-select.html" width="100%" height="500" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
         </div>
 
         <h3>3.4 Checkbox</h3>
@@ -240,7 +243,8 @@
 
         <div class="anteprima">
             <h4>Esempio Interattivo: Checkbox e Radio Button</h4>
-            <iframe src="esempi_1-2/esempio-checkbox-radio.html" width="100%" height="600" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/esempio-checkbox-radio.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/esempio-checkbox-radio.html</a></p>
+            <iframe src="esempi/esempio-checkbox-radio.html" width="100%" height="600" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
         </div>
 
         <h3>3.6 &lt;button&gt;</h3>
@@ -409,8 +413,9 @@
         </div>
 
         <div class="anteprima">
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/esempio-validazione.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/esempio-validazione.html</a></p>
             <h4>Esempio Interattivo: Validazione Form</h4>
-            <iframe src="esempi_1-2/esempio-validazione.html" width="100%" height="550" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/esempio-validazione.html" width="100%" height="550" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
         </div>
 
         <h3>5.2 Attributo novalidate</h3>
@@ -508,9 +513,10 @@
 &lt;/form&gt;</pre>
         </div>
 
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/esempio-file-upload.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/esempio-file-upload.html</a></p>
         <div class="anteprima">
             <h4>Esempio Interattivo: Upload File</h4>
-            <iframe src="esempi_1-2/esempio-file-upload.html" width="100%" height="700" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/esempio-file-upload.html" width="100%" height="700" style="border: 2px solid #ddd; border-radius: 4px;"></iframe>
         </div>
 
         <h2>8. Best Practices per i Form</h2>
