--- a/public/lezione-3/lezione-3-2.html
+++ b/public/lezione-3/lezione-3-2.html
@@ -628,7 +628,7 @@
         <div class="esempio">
             <iframe src="esempi/grid-system.html" width="100%" height="800" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Grid System completo - Ridimensiona per vedere i breakpoints</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/grid-system.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/grid-system.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/grid-system.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/grid-system.html</a></p>
         </div>
 
         <h2>14. Best Practices</h2>
