--- a/public/lezione-3/lezione-3-7.html
+++ b/public/lezione-3/lezione-3-7.html
@@ -688,7 +688,7 @@ toast.show()
         <div class="esempio">
             <iframe src="esempi/componenti-avanzati.html" width="100%" height="1000" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Tutti i componenti avanzati Bootstrap</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/componenti-avanzati.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/componenti-avanzati.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/componenti-avanzati.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/componenti-avanzati.html</a></p>
         </div>
 
         <h2>10. Best Practices</h2>
