--- a/public/lezione-4/lezione-4-1.html
+++ b/public/lezione-4/lezione-4-1.html
@@ -472,7 +472,7 @@ npx sass --style=compressed scss/style.scss css/style.min.css
         
         <div class="esempio">
             <iframe src="/lezione-4/esempi/primo-file-scss.html" style="width: 100%; height: 500px; border: 1px solid #ddd;"></iframe>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/primo-file-scss.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/primo-file-scss.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/primo-file-scss.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/primo-file-scss.html</a></p>
         </div>
 
         <h2>10. Risoluzione Problemi Comuni</h2>
