--- a/public/corso-frontend/index.html
+++ b/public/corso-frontend/index.html
@@ -12,6 +12,11 @@
         <div class="header">
             <h1>Corso Front-End Development</h1>
             <p>Benvenuto al corso di sviluppo frontend</p>
+            <div class="no-print" style="margin-top: 15px;">
+                <a href="print.html" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">
+                    📄 Versione Stampabile (Tutto il corso)
+                </a>
+            </div>
         </div>
 
         <h2>Lezioni</h2>
