--- a/public/lezione-2/lezione-2-1.html
+++ b/public/lezione-2/lezione-2-1.html
@@ -94,7 +94,7 @@ p {
         <div class="esempio">
             <iframe src="esempi/sintassi-css.html" width="100%" height="350" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Sintassi CSS</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/sintassi-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/sintassi-css.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/sintassi-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/sintassi-css.html</a></p>
         </div>
 
         <h2>4. Selettori CSS</h2>
@@ -171,7 +171,7 @@ nav > ul {
         <div class="esempio">
             <iframe src="esempi/selettori-css.html" width="100%" height="400" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Selettori CSS</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/selettori-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/selettori-css.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/selettori-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/selettori-css.html</a></p>
         </div>
 
         <h3>4.3 La Regola !important</h3>
@@ -343,7 +343,7 @@ opacity: 0.5;            /* da 0 (trasparente) a 1 (opaco) */</pre>
         <div class="esempio">
             <iframe src="esempi/proprieta-css.html" width="100%" height="400" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Proprietà CSS Fondamentali</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/proprieta-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/proprieta-css.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/proprieta-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/proprieta-css.html</a></p>
         </div>
 
         <h2>6. Posizionamento</h2>
@@ -369,7 +369,7 @@ z-index: 10;</pre>
         <div class="esempio">
             <iframe src="esempi/posizionamento.html" width="100%" height="500" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Posizionamento CSS</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/posizionamento.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/posizionamento.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/posizionamento.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/posizionamento.html</a></p>
         </div>
 
         <h2>7. Flexbox Base</h2>
@@ -399,7 +399,7 @@ z-index: 10;</pre>
         <div class="esempio">
             <iframe src="esempi/flexbox.html" width="100%" height="600" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Flexbox Base</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/flexbox.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/flexbox.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/flexbox.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/flexbox.html</a></p>
         </div>
 
         <h2>8. CSS Grid Layout</h2>
@@ -469,7 +469,7 @@ z-index: 10;</pre>
         <div class="esempio">
             <iframe src="esempi/grid.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: CSS Grid Layout</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/grid.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/grid.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/grid.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/grid.html</a></p>
         </div>
 
         <h2>9. Pseudo-classi e Pseudo-elementi</h2>
@@ -521,7 +521,7 @@ p::first-letter {
         <div class="esempio">
             <iframe src="esempi/pseudo-classi.html" width="100%" height="500" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Pseudo-classi e Pseudo-elementi</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/pseudo-classi.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/pseudo-classi.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/pseudo-classi.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/pseudo-classi.html</a></p>
         </div>
 
         <h2>10. Variabili CSS (Custom Properties)</h2>
@@ -581,7 +581,7 @@ p::first-letter {
         <div class="esempio">
             <iframe src="esempi/variabili-css.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Variabili CSS</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/variabili-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/variabili-css.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/variabili-css.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/variabili-css.html</a></p>
         </div>
 
         <h2>11. Media Query - Layout Responsive e Stampa</h2>
@@ -721,7 +721,7 @@ p::first-letter {
         <div class="esempio">
             <iframe src="esempi/media-query.html" width="100%" height="1000" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Media Query - Responsive e Stampa</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/media-query.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/media-query.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/media-query.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/media-query.html</a></p>
         </div>
 
         <h2>12. Esempio Completo: Pagina Stilizzata</h2>
@@ -801,7 +801,7 @@ p::first-letter {
         <div class="esempio">
             <iframe src="lezione-2-99.html" width="100%" height="800" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Pagina Biografia di Tim Berners-Lee</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="lezione-2-99.html" target="_blank" style="color: #0066cc; text-decoration: none;">lezione-2-99.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="lezione-2-99.html" target="_blank" style="color: #0066cc; text-decoration: none;">lezione-2-99.html</a></p>
         </div>
 
         <h2>Conclusione</h2>
