--- a/public/lezione-3/lezione-3-3.html
+++ b/public/lezione-3/lezione-3-3.html
@@ -597,7 +597,7 @@
         <div class="esempio">
             <iframe src="esempi/utilities.html" width="100%" height="800" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Utilities Bootstrap complete - Sperimenta con diverse classi</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/utilities.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/utilities.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/utilities.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/utilities.html</a></p>
         </div>
 
         <h2>12. Best Practices</h2>
