--- a/public/lezione-3/lezione-3-5.html
+++ b/public/lezione-3/lezione-3-5.html
@@ -543,7 +543,7 @@
         <div class="esempio">
             <iframe src="esempi/componenti-navigazione.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Componenti di navigazione Bootstrap</p>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/componenti-navigazione.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/componenti-navigazione.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/componenti-navigazione.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/componenti-navigazione.html</a></p>
         </div>
 
         <h2>6. Best Practices</h2>
