--- a/public/lezione-4/lezione-4-2.html
+++ b/public/lezione-4/lezione-4-2.html
@@ -472,7 +472,7 @@ $secondary-color: #2ecc71;
         
         <div class="esempio">
             <iframe src="/lezione-4/esempi/variabili-demo.html" style="width: 100%; height: 600px; border: 1px solid #ddd;"></iframe>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/variabili-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/variabili-demo.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/variabili-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/variabili-demo.html</a></p>
         </div>
 
         <h2>Punti Chiave</h2>
