--- a/public/lezione-4/lezione-4-3.html
+++ b/public/lezione-4/lezione-4-3.html
@@ -538,7 +538,7 @@
         
         <div class="esempio">
             <iframe src="/lezione-4/esempi/nesting-demo.html" style="width: 100%; height: 700px; border: 1px solid #ddd;"></iframe>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/nesting-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/nesting-demo.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/nesting-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/nesting-demo.html</a></p>
         </div>
 
         <h2>Punti Chiave</h2>
