--- a/public/lezione-4/lezione-4-4.html
+++ b/public/lezione-4/lezione-4-4.html
@@ -480,7 +480,7 @@ scss/
         
         <div class="esempio">
             <iframe src="/lezione-4/esempi/progetto-organizzato.html" style="width: 100%; height: 700px; border: 1px solid #ddd;"></iframe>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/progetto-organizzato.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/progetto-organizzato.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/progetto-organizzato.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/progetto-organizzato.html</a></p>
         </div>
 
         <h2>10. Confronto @import vs @use</h2>
