--- a/public/lezione-4/lezione-4-5.html
+++ b/public/lezione-4/lezione-4-5.html
@@ -622,7 +622,7 @@ $extended: map.merge($theme-colors, ('warning': #f39c12));</pre>
         
         <div class="esempio">
             <iframe src="/lezione-4/esempi/mixins-demo.html" style="width: 100%; height: 800px; border: 1px solid #ddd;"></iframe>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/mixins-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/mixins-demo.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/mixins-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/mixins-demo.html</a></p>
         </div>
 
         <h2>Punti Chiave</h2>
