--- a/public/lezione-4/lezione-4-7.html
+++ b/public/lezione-4/lezione-4-7.html
@@ -577,7 +577,7 @@ $breakpoint-values: (576px, 768px, 992px, 1200px);
         
         <div class="esempio">
             <iframe src="/lezione-4/esempi/control-directives-demo.html" style="width: 100%; height: 700px; border: 1px solid #ddd;"></iframe>
-            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/control-directives-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/control-directives-demo.html</a></p>
+            <p style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/control-directives-demo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/control-directives-demo.html</a></p>
         </div>
 
         <h2>Punti Chiave</h2>
